--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -9,12 +9,18 @@
                         <div class="sub header">We’re happy helping you get beautiful name badges.</div>
                     </h1>
                     <div class="ui hidden divider"></div>
-                    <form class="ui form">
+                    <form class="ui form" onsubmit={{action 'signUp'}}>
                         <div class="ui stacked element">
                             <div class="field required">
                                 <div class="ui left icon input">
                                     <i class="mail icon"></i>
                                     {{input type="text" value=email name="email" placeholder="E-mail address"}}
+                                </div>
+                            </div>
+                            <div class="field required">
+                                <div class="ui left icon input">
+                                    <i class="user icon"></i>
+                                    {{input type="text" value=username name="username" placeholder="Username"}}
                                 </div>
                             </div>
                             <div class="field required">
@@ -29,7 +35,7 @@
                                     {{input type="password" name="password_repeat" placeholder="Re-enter Password"}}
                                 </div>
                             </div>
-                            <button class="ui fluid large orange submit button" style="margin-bottom: 10px;" {{ action 'signUp' }}>Sign Up</button>
+                            <button class="ui fluid large orange submit button" style="margin-bottom: 10px;" type="submit">Sign Up</button>
                             <div class="ui divider"></div>
                             <a href="{{href-to 'login'}}" class="text muted weight-800">Already have an account? Log in</a>
                         </div>
