Fixes #866 : Sending Oauth data to backend for user registration (#869)
<!-- Add the issue number that is fixed by this PR (In the form Fixes #123) -->
Fixes #866 

#### Checklist

- [x] I have read the [Contribution & Best practices Guide](https://blog.fossasia.org/open-source-developer-guide-and-best-practices-at-fossasia) and my PR follows them.
- [x] My branch is up-to-date with the Upstream `development` branch.
- [ ] I have added necessary documentation (if appropriate)

### Preview Link 

- **Replace XXX with your PR no**
- Link to live demo: http://pr-XXX-fossasia-badgeyay.surge.sh  

#### Changes proposed in this pull request:

- Sending OAuth Login data to backend for user registration
-
PS : The changes are extended from my previous PR. So When the previous PR gets merged the commit will be gone.

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -31,8 +31,8 @@
                 {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
             </div>
         </div>
-  </div>
-  <div class="ui raised segment">
+    </div>
+    <div class="ui raised segment">
         <div class="ui form width-container">
             <div class="center aligned column">
                 {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
@@ -50,6 +50,9 @@
                 {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
             </div>
         </div>
-  </div>
-  <button {{action "submitForm"}} class="ui button">Submit form</button>
+    </div>
+    <button {{action "submitForm"}} class="ui button">Submit form</button>
+    {{#each userError as |error|}}
+    <p>{{error.message}}</p>
+    {{/each}}
 </div>
