--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -5,8 +5,8 @@
             <div class="row" >
                 <div class="column">
                     <h1 class="ui orange header">
-                        Welcome back !
-                        <div class="sub header">We’re happy helping you get beautiful name badges.</div>
+                        Welcome!
+                        <div class="sub header">Lets make some badges!</div>
                     </h1>
                     <div class="ui hidden divider"></div>
                     <form class="ui form">
@@ -24,9 +24,9 @@
                                 </div>
                             </div>
                             <button class="ui button orange fluid" style="margin-bottom: 10px;" {{ action 'logIn' 'password' }}>Log In</button>
-                            <a href="#" class="text muted"> Forgot your password ?</a>
+                            <a href="#" class="text muted"> Forgot password</a>
                             <div class="ui divider"></div>
-                            <a href="{{href-to 'signup'}}" class="text muted weight-800">Don’t have an account yet? Signup</a>
+                            <a href="{{href-to 'signup'}}" class="text muted weight-800">Create an Account</a>
                         </div>
                     </form>
                     <div class="ui horizontal divider">
