--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,6 +1,6 @@
 <div class="ui menu">
   {{#link-to 'index' class="header item"}}
-    <h2>Badgeyay</h2>
+    <h2 style="line-spacing: 1px">Badgeyay</h2>
   {{/link-to}}
   <div class="right menu">
     {{#if session.isAuthenticated}} 
@@ -8,11 +8,9 @@
           <div class="circular ui red button"  style="text-transform: uppercase; font-weight: 400"  {{action 'logOut'}} >Logout</div>
       </div>  
     {{else}}
-      <div class="item">
-        {{#link-to 'login'}}
-          <div class="circular ui orange button" style="text-transform: uppercase; font-weight: 400">Login</div>
-        {{/link-to}}
-      </div>  
+      {{#link-to 'login'}}
+        <div class="item ui button"style="text-transform: uppercase; font-weight: 400; line-spacing: 0.5px; line-height: 30px">Login</div>  
+      {{/link-to}}
     {{/if}}
   </div>
 </div>
