Fixes #884: Centering form contents on the terms of v1

--- a/frontend/app/styles/partials/overrides.scss
+++ b/frontend/app/styles/partials/overrides.scss
@@ -4,3 +4,11 @@
   border-radius: 0;
   box-shadow: none;
 }
+
+.ui.container.main-container {
+  width: 720px;
+}
+
+.max-width {
+  width: 100%;
+}
