--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -1,15 +1,12 @@
 <div class="field">
     <label>Select font size</label>
-  <div class="ui segments">
-  <div class="ui segment">
   <input type="range"
+  class="max-width"
   oninput={{action (mut size)
   value="target.value"}}
   min={{min}}
   max={{max}}
   defFontSize={{size}}
   steps="1">
-  </div>
-  <div class="ui raised segment">{{size}}</div>
-  </div>
+  <div>{{size}}</div>
 </div>
