Fixes #896 : Reduced the time for asset helper by using ember public assets

--- a/frontend/app/templates/components/background-component/def-image-component.hbs
+++ b/frontend/app/templates/components/background-component/def-image-component.hbs
@@ -6,7 +6,7 @@
         <div class="menu">
             {{#each defImages as |image|}}
                 <div data-value="{{image.id}}" class="item">
-                    <img class="ui mini image" src="data:image/png;base64, {{image.imgData}}">
+                    <img class="ui mini image" src="/images/badge_backgrounds/{{image.name}}">
                     {{image.name}}
                 </div>
             {{/each}}
