Fixes #919 : Deploy Backend API to heroku and frontend fix for prod

--- a/frontend/app/templates/components/background-component/def-image-component.hbs
+++ b/frontend/app/templates/components/background-component/def-image-component.hbs
@@ -6,7 +6,7 @@
         <div class="menu">
             {{#each defImages as |image|}}
                 <div data-value="{{image.id}}" class="item">
-                    <img class="ui mini image" src="/images/badge_backgrounds/{{image.name}}">
+                    <img class="ui mini image" src="/assets/images/badge_backgrounds/{{image.name}}{{fingerPrint}}.png">
                     {{image.name}}
                 </div>
             {{/each}}
