Fixes #914 : Implemented checkbox logic

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,53 +1,95 @@
 <div class="ui hidden divider"></div>
 <div class="ui raised segment">
     <div class="ui form width-container">
-        <div class="center aligned">
-            {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
+        <p><b>Select from one of the Input Sources</b></p>
+        {{#ui-accordion class="styled fluid"}}
+        <div class="title" onclick={{action "csvClicked"}}>
+            <i class="plus icon"></i>
+            Add CSV File
         </div>
-        <div class="ui horizontal divider">
-            Or
+        <div class="content">
+            <div class="center aligned">
+                {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
+            </div>
         </div>
-        <div class="center aligned">
-            {{ data-component/text-component sendText=(action 'mutateText') }}
+        <div class="title" onclick={{action "manualClicked"}}>
+            <i class="plus icon"></i>
+            Add Manual Data
         </div>
+        <div class="content">
+            <div class="center aligned">
+                {{ data-component/text-component sendText=(action 'mutateText') }}
+            </div>
+        </div>
+        {{/ui-accordion}}
     </div>
 </div>
 <div class="ui raised segment">
     <div class="ui form width-container">
-        <div class="center aligned">
-            {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
+        <p><b>Select from one of the background sources</b></p>
+        {{#ui-accordion class="styled fluid"}}
+        <div class="title" onclick={{action 'defImageClicked'}}>
+            <i class="plus icon"></i>
+            Default Images
         </div>
-        <div class="ui horizontal divider">
-            Or
+        <div class="content">
+            <div class="center aligned">
+                {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
+            </div>
         </div>
-        <div class="center aligned">
-            {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
+        <div class="title" onclick={{action 'bgColorClicked'}}>
+            <i class="plus icon"></i>
+            Select from Background color
         </div>
-        <div class="ui horizontal divider">
-            Or
+        <div class="content">
+            <div class="center aligned">
+                {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
+            </div>
         </div>
-        <div class="center aligned">
-            {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
+        <div class="title" onclick={{action 'custImgClicked'}}>
+            <i class="plus icon"></i>
+            Upload a custom image
         </div>
+        <div class="content">
+            <div class="center aligned">
+                {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
+            </div>
+        </div>
+        {{/ui-accordion}}
     </div>
 </div>
 <div class="ui raised segment">
     <div class="ui form width-container">
-        <div class="center aligned">
-            {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
+        <p><b>Select from following font customizations</b></p>
+        {{#ui-accordion class="styled fluid"}}
+        <div class="title">
+            <i class="plus icon"></i>
+            Font Family
         </div>
-        <div class="ui horizontal divider">
-            Or
+        <div class="content">
+            <div class="center aligned">
+                {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
+            </div>
         </div>
-        <div class="center aligned">
-            {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
+        <div class="title">
+            <i class="plus icon"></i>
+            Font Color
         </div>
-        <div class="ui horizontal divider">
-            Or
+        <div class="content">
+            <div class="center aligned">
+                {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
+            </div>
         </div>
-        <div class="center aligned">
-            {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
+        <div class="title">
+            <i class="plus icon"></i>
+            Font Size
         </div>
+        <div class="content">
+            <div class="center aligned">
+                {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
+            </div>
+        </div>
+        {{/ui-accordion}}
     </div>
 </div>
 <button {{action "submitForm"}} class="ui fluid button">Create Badges</button>
@@ -56,7 +98,10 @@
     <div class="header">
         Badge generated successfully
     </div>
-    <p>Visit this <b><a href="{{backLink}}/static/badges/{{genBadge}}.pdf">link</a></b> to download badge</p>
+    <p>Visit this
+        <b>
+            <a href="{{backLink}}/static/badges/{{genBadge}}.pdf">link</a>
+        </b> to download badge</p>
 </div>
 {{/if}} {{#each userError as |error|}}
 <p>{{error.message}}</p>
