Fixes #951 : Added Firebase Uploader for badge storage in google cloud storage (#953)

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -116,7 +116,7 @@
     </div>
     <p>Visit this
         <b>
-            <a href="{{backLink}}/static/badges/{{genBadge}}.pdf">link</a>
+            <a href="{{genBadge.download_link}}">link</a>
         </b> to download badge</p>
 </div>
 {{/if}} {{#each userError as |error|}}
