Adds My Badges Component
Adds My Badges Component

Adds My Badges Component

Adds My Badges Component

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -7,7 +7,7 @@
             {{#ui-dropdown class='large item' action='hide'}}
                 <div>Welcome</div><i class="dropdown icon"></i>
                 <div class="menu profile-dropdown-menu">
-                    <a class="item"><i class="clone outline icon"></i>My Badges</a>
+                    <a href="{{href-to 'my-badges'}}" class="item"><i class="clone outline icon"></i>My Badges</a>
                     <a class="item"><i class="user outline icon"></i>Profile</a>
                     <a class="item"><i class="cog icon"></i>Settings</a>
                     <a class="item" {{action 'logOut'}}><i class="sign out alternate icon"></i>Logout</a>
