Fixes #969 : Added photoURL Change for the user profile

--- a/frontend/app/templates/components/user-component/my-profile.hbs
+++ b/frontend/app/templates/components/user-component/my-profile.hbs
@@ -1,8 +1,10 @@
 <div class="ui hidden divider"></div>
 <div class="ui width-container">
     <div class="left column">
-      <div class="ui small image">
-          <img src="/images/user.png">
+      <div class="ui small circular image profile-image">
+          <img src="{{user.photoURL}}">
+          <input style="display: none;" id="profileImageSelector" type="file" onchange={{action "profileImageSelected"}}>
+          <div class="profile-change" onclick={{action "updateProfileImage"}}><b>Change</b></div>
       </div>
     </div>
 <div class="ui hidden divider"></div>
