--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -1,47 +1,79 @@
 <div class="ui hidden divider"></div>
-
-{{#each model as |badge|}}
-
-  <div class="ui card">
-    <div class="content">
-      <div class="header">Badge</div>
+<div class="ui pointing menu">
+  <div class="active item">My Badges</div>
+    <div class="right menu">
+        {{#ui-dropdown class='item' action='hide'}}
+            <div>Sort By </div>&nbsp;
+            <i class="sort icon"></i>
+              <div class="menu profile-dropdown-menu">
+                <a class="item">First Created</a>
+                <a class="item">Recently Created</a>
+              </div>
+        {{/ui-dropdown}}
     </div>
-    <div class="content">
-      <h4 class="ui sub header">Badge Details</h4>
-      <div class="ui small feed">
-        <div class="event">
-          <div class="content">
-            <div class="summary">
-               Image : {{badge.image}}
+</div>
+<div class="ui bottom attached active tab segment">
+  {{#each model as |badge|}}
+    <div class="ui raised card">
+      <div class="content">
+        <div class="header">Badge</div>
+      </div>
+      <div class="content">
+        <h4 class="ui header">Badge Details:</h4>
+        <div class="ui small feed">
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                Image : {{badge.image}}
+              </div>
             </div>
           </div>
-        </div>
-        <div class="event">
-          <div class="content">
-            <div class="summary">
-               CSV : {{badge.csv}}
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                CSV : {{badge.csv}}
+              </div>
             </div>
           </div>
-        </div>
-        <div class="event">
-          <div class="content">
-            <div class="summary">
-               Badge Size : {{badge.badge_size}}
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                Badge Size : {{badge.badge_size}}
+              </div>
             </div>
           </div>
-        </div>
-        <div class="event">
-          <div class="content">
-            <div class="summary">
-               Text Color : {{badge.text_color}}
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                Text Color : {{badge.text_color}}
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="ui bottom attached button">
+        <i class="download icon"></i>
+        <a href="{{badge.download_link}}">Download Badge</a>
+      </div>
     </div>
-    <div class="extra content">
-      <a href="{{badge.download_link}}" class="ui button">Download Badge</a>
+  {{/each}}
+</div>
+<div class="ui centered grid">
+  <div class="computer only row">
+    <div class="column"></div>
+  </div>
+  <div class="six wide tablet eight wide computer column">
+    <div class="ui menu">
+      <div class="ui pagination menu">
+        <a class="active item">
+          1
+        </a>
+        <div class="right menu">
+          <div class="disabled item">
+            ...
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-{{/each}}
+</div>
