--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -3,7 +3,7 @@
     {{#if (eq currentRouteName 'index')}}
       {{welcome-header session=session}}
     {{/if}}
-    <div class="ui container main-container">
+    <div class="ui container">
         {{outlet}}
     </div>
 </div>
