--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,4 +1,5 @@
-<div class="ui hidden divider"></div>
+<div class="main-container">
+    <div class="ui hidden divider"></div>
 <div class="ui raised segment">
     <div class="ui form width-container">
         <p><b>Select from one of the Input Sources</b></p>
@@ -122,3 +123,4 @@
 {{/if}} {{#each userError as |error|}}
 <p>{{error.message}}</p>
 {{/each}}
+</div>
