Added Footer Component and minor changes in UI

--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -1,5 +1,4 @@
-<div class="ui hidden divider"></div>
-<div class="ui raised segment">
+<div class="signup">
     <div class="ui stackable column doubling centered grid">
         <div class="ui middle aligned center aligned grid">
             <div class="row" >
