--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -6,5 +6,6 @@
     <div class="ui container main-container">
         {{outlet}}
     </div>
+    {{footer-main}}
 </div>
 {{ember-notify messageStyle='semantic-ui' classPrefix='notification-container'}}
