--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -1,4 +1,4 @@
-<div class="ui menu">
+<div class="ui top menu">
     {{#link-to 'index' class="header item"}}
     <h2 style="line-spacing: 1px">Badgeyay</h2>
     {{/link-to}}
