Fixes #992 : Added Password Reset mail functionality

--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -23,7 +23,7 @@
                                 </div>
                             </div>
                             <button class="ui button orange fluid" style="margin-bottom: 10px;" type="submit">Log In</button>
-                            <a href="#" class="text muted"> Forgot password</a>
+                            <a href="{{href-to 'forgotpwd'}}" class="text muted"> Forgot password</a>
                             <div class="ui divider"></div>
                             <a href="{{href-to 'signup'}}" class="text muted weight-800">Create an Account</a>
                         </div>
