Adds create-badges in Nav Bar

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -7,6 +7,7 @@
             {{#ui-dropdown class='large item' action='hide'}}
                 <div>Welcome</div><i class="dropdown icon"></i>
                 <div class="menu profile-dropdown-menu">
+                     <a href="{{href-to 'create-badges'}}" class="item"><i class="pencil alternate icon"></i>Create Badges</a>
                     <a href="{{href-to 'my-badges'}}" class="item"><i class="clone outline icon"></i>My Badges</a>
                     <a href="{{href-to 'my-profile'}}" class="item"><i class="user outline icon"></i>Profile</a>
                     <a class="item"><i class="cog icon"></i>Settings</a>
