Fixes #1002 : Added forgot password form

--- a/frontend/app/styles/partials/forgotpwd.scss
+++ b/frontend/app/styles/partials/forgotpwd.scss
@@ -5,3 +5,11 @@
   max-width: 480px;
   padding: 10px;
 }
+
+.reset-password {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 18%;
+  max-width: 480px;
+  padding: 10px;
+}
