--- a/frontend/app/templates/reset/password.hbs
+++ b/frontend/app/templates/reset/password.hbs
@@ -1,5 +1,6 @@
 {{#if model.valid}}
-    <p>Valid</p>
+    {{password-comp resetPwd=(action 'resetPwd')}}
 {{else}}
-    <p>Not a valid thing</p>
+    <div class="ui hidden divider"></div>
+    <h5>Token Invalidated</h5>
 {{/if}}
