--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container create-badge">
     <div class="ui hidden divider"></div>
     <div class="ui raised segment">
         <div class="ui form width-container">
