Fixes #1017 : Patch for forgot password

--- a/frontend/app/templates/reset/password.hbs
+++ b/frontend/app/templates/reset/password.hbs
@@ -1,6 +1,6 @@
-{{#if model.valid}}
-    {{password-comp resetPwd=(action 'resetPwd')}}
-{{else}}
+<div class="forgot-password">
+    {{#if model.valid}} {{password-comp resetPwd=(action 'resetPwd')}} {{else}}
     <div class="ui hidden divider"></div>
     <h5>Token Invalidated</h5>
-{{/if}}
+    {{/if}}
+</div>
