Added Validations in Forgot Password Forms

--- a/frontend/app/templates/components/forgot-password.hbs
+++ b/frontend/app/templates/components/forgot-password.hbs
@@ -8,7 +8,7 @@
                         <label>Please Enter Your Registered Email</label>
                         {{input name="email" value=email placeholder="Email" type="email"}}
                     </div>
-                    <div class="ui animated button blue" onclick={{action 'sendResetMail'}} tabindex="0">
+                    <div class="ui animated button orange" onclick={{action 'sendResetMail'}} tabindex="0">
                         <div class="visible content">Send Reset Mail</div>
                         <div class="hidden content">
                             <i class="right arrow icon"></i>
