--- a/frontend/app/templates/components/password-comp.hbs
+++ b/frontend/app/templates/components/password-comp.hbs
@@ -11,7 +11,7 @@
                         </div>
                         <div class="required field">
                             <label>Confirm password</label>
-                            {{input name="password" value=confirmPwd placeholder="Confirm Password" type="password"}}
+                            {{input name="password_repeat" value=confirmPwd placeholder="Confirm Password" type="password"}}
                         </div>
                         <button class="ui fluid button blue" type="submit" onclick={{action 'sendPwd'}}>Reset Password</button>
                     </form>
