--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -3,6 +3,13 @@
   top: 30px;
 }
 
+#overlay {
+    background: url("/images/loader.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
 .guide {
   left: 425px;
   position: relative;
