Solves codacy errors

--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -3,7 +3,7 @@
   top: 30px;
 }
 
-#overlay {
+.overlay-loader {
   background: url("/images/loader.gif");
   background-position: center;
   background-repeat: no-repeat;
