--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,7 +1,7 @@
 <div class="main-container create-badge">
     <div class="ui hidden divider"></div>
     {{#if overlay}}
-        <div class="ui" id="overlay">
+        <div class="ui overlay-loader">
         </div>
     {{else}}
         <div class="ui raised segment">
