Removed Redundant entries from Gitignore and minor fix in the login form

--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -4,7 +4,7 @@
             <div class="row" >
                 <div class="column">
                     <h1 class="ui orange header">
-                        Welcome!
+                        Welcome
                         <div class="sub header">Lets make some badges!</div>
                     </h1>
                     <div class="ui hidden divider"></div>
