--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -8,7 +8,7 @@ $color4: #ffa500;
   background: linear-gradient($color1, $color1), url("/images/landing.jpg");
   background-position: center;
   color: $color3;
-  height: 1080px;
+  height: 60vh;
   overflow: hidden;
   position: relative;
 
@@ -17,7 +17,7 @@ $color4: #ffa500;
     position: absolute;
     right: 20%;
     text-align: center;
-    top: 325px;
+    top: 25vh;
 
     .lead {
       font-size: 65px;
